feat: migration of groovy policy
https://gravitee.atlassian.net/browse/APIM-10261